[tool.poetry]
name = "dorado-streamlit"
version = "0.1.0"
description = "Dorado observer web tools built with Streamlit"
authors = ["Leo Singer <leo.singer@ligo.org>"]
license = "NOSA"

[tool.poetry.dependencies]
python = "^3.7"
dorado-sensitivity = "*"
seaborn = "*"
streamlit = "*"

[tool.poetry.dev-dependencies]
watchdog = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
